QQuickLoader: store status

This allows us to emit the change signal only when the status has
actually changed. Due to alignment restrictions, this does not even
change the size of the class.

Fixes: QTBUG-82002
Change-Id: I2192bf80e72b92108046780811c3acdab39af518
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>